<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".SubmissionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@drawable/gads_submit"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="18dp"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingEnd="18dp"
        android:paddingRight="18dp"
        android:singleLine="false"
        android:text="@string/project_submission"
        android:textColor="@color/submitOrange"
        android:textColorLink="@color/submitOrange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />


    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_corners_input"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="@+id/text_title_submit"
        app:layout_constraintTop_toBottomOf="@+id/text_title_submit" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_corners_input"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_submit" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_corners_input"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etProjectLink"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_corners_input"
        android:ems="10"
        android:hint="@string/project_on_github_link"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnSubmission"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners_submit_button"
        android:shadowColor="#7A7474"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProjectLink" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="-1dp"
        android:background="@drawable/submission_base_line"
        android:text="___________________________________________"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/etLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_submit"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>